kubernetes/webapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloapp-deployment
  namespace: kube-test
  labels:
    app: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: hello-world
        ports:
        - containerPort: 80
