kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: kube-test
spec:
  selector:
    app: webapp
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 80
